force-app/main/default/objects/Banking_Details__c/Banking_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Banking Details</label>
</CustomObject>