force-app/main/default/objects/Banking_Details__c/fields/ELFI_Account__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Account__c</fullName>
    <label>ELFI Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>