force-app/main/default/objects/Banking_Details__c/fields/ELFI_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Bank_Name__c</fullName>
    <label>ELFI Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>