force-app/main/default/objects/Banking_Details__c/fields/ELFI_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Beneficiary_Name__c</fullName>
    <label>ELFI Beneficiary Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>