force-app/main/default/objects/Banking_Details__c/fields/ELFI_Branch__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Branch__c</fullName>
    <label>ELFI Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>