force-app/main/default/objects/Banking_Details__c/fields/ELFI_Institution__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Institution__c</fullName>
    <label>ELFI Institution #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>