force-app/main/default/objects/Banking_Details__c/fields/Rhino_Account__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Account__c</fullName>
    <label>Rhino Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>