force-app/main/default/objects/Banking_Details__c/fields/Rhino_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Bank_Name__c</fullName>
    <label>Rhino Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>