force-app/main/default/objects/Banking_Details__c/fields/Rhino_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Beneficiary_Name__c</fullName>
    <label>Rhino Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>