force-app/main/default/objects/Banking_Details__c/fields/Rhino_Branch__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Branch__c</fullName>
    <label>Rhino Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>