force-app/main/default/objects/Banking_Details__c/fields/Rhino_Institution__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Institution__c</fullName>
    <label>Rhino Institution #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>