force-app/main/default/objects/Banking_Details__c/fields/Seahold_Account__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Account__c</fullName>
    <label>Seahold Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>