force-app/main/default/objects/Banking_Details__c/fields/Seahold_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Bank_Name__c</fullName>
    <label>Seahold Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>