force-app/main/default/objects/Banking_Details__c/fields/Seahold_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Beneficiary_Name__c</fullName>
    <label>Seahold Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>