force-app/main/default/objects/Banking_Details__c/fields/Seahold_Branch__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Branch__c</fullName>
    <label>Seahold Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>