force-app/main/default/objects/Banking_Details__c/fields/Seahold_Institution__c.field-meta.xml
<CustomField>
    <fullName>Seahold_Institution__c</fullName>
    <label>Seahold Institution #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>